@@ -1,29 +1,33 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX logrotate 119 SHA256 09e12d5f8f026251a0a8532dfc181199085e4cc23a3f4cbb4dd15a4bea5af6ad SHA512 5aa4226ab2d168a88a3b64deb114d3901431d2afb2571cf8ae411c989549bc465ee05104a6863cc8fce6d769d809b4ab536973280f50cb4415c6698c34e1a5b8 WHIRLPOOL 982d153670d43bf5b195988887474cd8b4dc268dc663ce88d430f86d83f6cf5cd3bc0455495eb8d225fe4d6179b5bf6e3136d3d960cb9b1d1dabeb0b2f4288a3
 AUX pgbouncer-dirs.patch 685 SHA256 d5b0875000c89e945b0eb3f3007d68b211d675a4e18872ef7166c76dbd3eb695 SHA512 6a475bf5cff10b464177af619051529ad78e802c56655500ad23130c5989721f41592387f9bf6719810eae2d876a8dd36219b87ae1fdb29304b2adc98c49ae4c WHIRLPOOL ac8df7239880f21479bec1153a4b9a6ab4da937bccec38205785ccc4f951b4d8a227e94c12f564b2694803a2a43c5390c4700944c9ed60f55fdbeeec370439c7
 AUX pgbouncer.confd 425 SHA256 e681f992f6051bc1bb2887f712530c38be1c0a2ffb8ee254d0438b8679f55b9c SHA512 9f997cbfb18f5bb1623aea2a9af706359a973fd2167be91ee6ffb37a22a6dc453280c66b6d2c11ab0174dbf159a195f0a1612be198466633d728a5317a878035 WHIRLPOOL bbad3f2609c638e859e44555e25bef1249a7cbb024a7f6e07f4cee57bfc1571d8100a43715360d2d03a9bf62b0ed65878339cc5f641ac0f3736296a93c597b6f
 AUX pgbouncer.initd 2182 SHA256 50894b7b28713e19c13575a2dd4250f91268bb7ede4d8a4c756b520faa6de342 SHA512 3d9037adb342a2d8c9e0e447ca3d1926243d69597622806d1dd4b35dad58fec4b7d9f3bd2dfc49257e4a54e9fbcf9290f3a0f93762d9e2dbb104626700527609 WHIRLPOOL 2c22871a06c1e043dfa2821d43ced9bd18606bb56ecce3f3963c5661a0f12ce650b4496b9bbd185f49aade2e32bd59c5ab056f5e1979dcef7878b2b97fcb6c3b
 DIST pgbouncer-1.5.4.tar.gz 339610 SHA256 08040482f4c887e14d8c8c46fab838fff640c0f3cf231f86ad7f766b7a292280 SHA512 ade8304eba682a468a5e4c1c5e661d67ea64fad951d6f767a3157de4e5398c52492b2ca022f274c55e43022df8d5fad87e45fc60adbcbab00a5ac843a26c6b71 WHIRLPOOL 107d028eaa4ea9f0469994ca9fa3caab64fc33dd2c7228aa7784b04b89091352a6b086fe7123ddfbcc9900b1c1cadef4c08030d9b9a5b169a4be4441ff3a6f02
+DIST pgbouncer-1.5.5.tar.gz 336145 SHA256 d65a192d1e2e69bf445d536f10211857959fc38e0247d1974e8008253080e234 SHA512 fd31b25ab2c0fb206797d54cba42f221bf5d9d1bae76d8f0b77ae746b504b51640cab04d60589c7d96f275c50b98b8bdf854702981838b74c23ed7095d85e853 WHIRLPOOL 115a45a4c9e9589c4d872c9469619a7fa6199d8a010d090e530051867210ed5647565c93c118b83717fc70b73b99f6f1309815d767bbb768b46e1ab2b9378c29
 EBUILD pgbouncer-1.5.4-r1.ebuild 1921 SHA256 80562436a99dcc8fe134ca5547d2ea6c6dcdf9e5c6c39c442c1fb4979fd824da SHA512 c747ec5adcf66f91018cc6246acaa71abfc346d28872ef23796fc8f49c4be4973c78eef630d2a04fe08a11bc5dc1fab7c900724c1262f201b859b56e8b21adf4 WHIRLPOOL d4cd86ded770052a968a3fdaf3095df69bcf7335198df79b8676e3cd94e436530c0d22c4502a86bfaf4cec05ab3134c04a1cea6f14d17e51bbe1e2ab8e4e1509
 EBUILD pgbouncer-1.5.4.ebuild 1944 SHA256 215abd41066c2d7b9d7a1be30d5567dda81ae19308edd75c2f765e44a672f59d SHA512 970d0a6be1184e17c6b59bcde5e87ec404660644f774981cf914a646187a341805cb1fc633d9ce1a5e1ed617ef7c2f1a362627142225992bce03a0c05dff93e1 WHIRLPOOL 3b1e4213b8735e81b831b1124420876fbec652b32beceb051c501e3260ae915d60ffec9df89b4c16ed32a0ad598efd7c253ff565499e946b6909270f08c8d817
-MISC ChangeLog 2550 SHA256 6c71c9f4262939357dbe03ac6eeed811d16b546f3ac05a28f7f19b153f809311 SHA512 f61705b9cf22c4651cd6961366ccac8b6ed9bed274c853857960eb71dad88253ae42855f0541bb54ef267935e55b9941cea7d870a55b23b7fbc9490aa264f592 WHIRLPOOL 6f13e391c0da572c275524a7f5c2d7dc6e5d5ab2e99e46453760458d671491b03e62905513d7cb63c0ec730a0c492c0366755876dfa220c07a35734bfc39c920
+EBUILD pgbouncer-1.5.5.ebuild 1891 SHA256 997406b7721a7104bc2924ad46a3464d125e46169e81158d3ad36b15599569b4 SHA512 5009540a608afea0501ea7eeb45d4e3391b7280800d0dc24f360db2d08bc14b27e1566169457f2286f5fed8ec130bc8a2e8d4e298cb1c3e2d92990e1cfd0b1a2 WHIRLPOOL 7fec7ca2c716f2e8e5a902d55ee6fd2b6091e1441b789c52f94422679db6f6155b8963f8efa91d16854335b198d4a7842796982222f666c54251aff5ddfcb21c
+MISC ChangeLog 2800 SHA256 5d899d2830d6ffe1ef3a58aa1161fcada9b09e2ba3bf2d45c5afe1fcfc9e5010 SHA512 4332c8917229ff25709efdd12a97f71596e7b8eab5ff9bc62d2fa5a0b119de9301a5508e2935646bc48d9b31ffe789ed83162e324164e9a39eb68182526507f2 WHIRLPOOL a10f35230f908d9544e1ecfb6df07afda7da448e593d8eafef24e535c3ad92b77d83caa22e48a4f6b1371808f2496800e2ba46bdcab826d0adcec83bf0cbd02d
 MISC metadata.xml 687 SHA256 6c86b074d669b130901588bfe5683a3dd86895219cc9e6c94ffe88671065b67f SHA512 37821a44019dcd379378d1acc28d59dcbd6b0cca8366a941a179d6338c92825233b113d53ef4d15ffa32ac40b127b04f74e8b3ce7af21185d08758286389a285 WHIRLPOOL 6937473b0039b501309065643b79220fd85978cff813358f30567e1540e3124060b3ab53c3d15ca92911bb0ac27f7dc6cb00585181731820dc10c821dec09a20
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCgAGBQJSSbHWAAoJELp701BxlEWfHggQAJbkEYkLwkYoClUWofS+jCY+
-AYfcIpsH4HF8n1gQuFjjCHuQT1rgHQN9ZWIXEYkhZbk/A/QJHL6OGkpAhug9KbPk
-bdjpciNv1ILxvuSSO9M5QCaD/f5VK9bUf3oTYhzALDP7AAVarNOvk2lh1crMTPFA
-KllhLkU0C/pIMSF5Ky9zoVzqSY2mZOXLw2Sa79sz4Q9wWRKQ9aOf8S0pq7roXx93
-lf2pmA8eks/WBMU6L9NHw7RCfyzKGJqpqL6uvfmEPdbmD7zTMaVWzVfO2J4VwQUl
-hjMvCTNLhyHIl4UyME+sQUmmug0vUJxUFhthCj0owtUoHZAZ1QQuNVo5jyaaZAZC
-aN3xMAzI3LDEsiIYoO4em1apOWvSrB5G64QEbZxUAdN5okSv0Z1BHeQnQYIIIwG7
-tK3a3Ep2Nadk51yb8TWYkZxFAVbHEuyWYeEX9+mL7wnsoVdpsFV/woO6ZMMTemFl
-c6t/pm1Tlfis5M7UTn46WoVDe8ccyjT4QnpXBhLxuAaW00jtscNypYDu44I3prMh
-MW2R7XJG2tamMXMyfUa1OuSbKO68QYe0m01sOpLkcNYgmOGIj/keoUCMJ7LPWRF9
-XRSdHY2bNGaG2PXBcpb9NucWehhpSaHfICNbqtYJccJXxGmbLdQpoG60jo3UNdDO
-w+ksof+60yT3jLfy8OzY
-=TqWJ
+iQJ8BAEBCABmBQJVL2FxXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO+U4P/j+N9WxHS1QqJWt+26gC/K1j
+VIUWBbb1BH5Lxf5wHxwIufcapFuojIw2cWSZ97lc3xD7P6s8HLzzjc8AYAmxE+6I
+iqSuq+6Bkz8IQGP+k20LeMmzDV8VtRLkitjXWikGUQNX+HXRenheyZDIzBJVX6Q2
+GDJU/WRpjvkeUCDc57B3ngnJQlb8ephu+SA3VOn/ocOrjR24PQkhfRKLQp9z9YVH
+kuxvEI/alWigAGtKdX/e7hX56jXgsU39TmWPobBP8QpLd5Uzf4JU22RcHsTZ28jU
+9pRTyFS9bJMXHCqPmUtfRvd7TsZGKmRqphScieOrmGOoixgZaouCC7PYPUVCxSqO
+ZolPCWpxTIhJAkY/Tz9dANIXjFkksx1ZawUTvc7w1WfVd9SSKeYncXH6iqYy1T7s
+rRVcCkqToTIpk9zN3Kj29c4nsY7p5MaA3AkEW7U7+l6DpMsOPhJeeu8rIiBJbUT1
+rDIX3xyjeIz5dOMjH/8mL89EwFXzKqqsGmtmoLkfzL5M7/EDJfMp/Afw6CGUlkLn
+eICQRjzrHuNg96379ADFeO2hNbPTHuZVGgITPObCwe8BSjzM6WTgpphhd/8sOmTQ
+D208ZyDdkKlBib9QCog59WZef5rbWWsScf96cW+V90IHii9at15wE5M6ZM8u6fQa
+0lseaPdEl4P9wUfZawfl
+=iewF
 -----END PGP SIGNATURE-----
