@@ -1,0 +1,15 @@
+DEFINED_PHASES=configure install postinst prepare setup
+DEPEND=>=sys-libs/glibc-2.10 libevent? ( >=dev-libs/libevent-2.0 ) udns? ( >=net-libs/udns-0.1 ) app-text/docbook-xml-dtd:4.5 app-text/xmlto >=app-text/asciidoc-8.4
+DESCRIPTION=Lightweight connection pooler for PostgreSQL
+EAPI=5
+HOMEPAGE=https://pgbouncer.github.io
+IUSE=debug doc libevent udns
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD
+RDEPEND=>=sys-libs/glibc-2.10 libevent? ( >=dev-libs/libevent-2.0 ) udns? ( >=net-libs/udns-0.1 )
+REQUIRED_USE=libevent? ( !udns ) udns? ( !libevent )
+RESTRICT=test
+SLOT=0
+SRC_URI=https://pgbouncer.github.io/downloads/pgbouncer-1.5.5.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=f6c7621cbcb60ee95ec9a67aadb87069
