@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/pgbouncer
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/pgbouncer/ChangeLog,v 1.14 2013/09/30 17:16:15 ago Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/pgbouncer/ChangeLog,v 1.15 2015/04/16 07:14:56 mgorny Exp $
+
+*pgbouncer-1.5.5 (16 Apr 2015)
+
+  16 Apr 2015; Michał Górny <mgorny@gentoo.org> +pgbouncer-1.5.5.ebuild:
+  Version bump with DoS bugfix. Update HOMEPAGE & SRC_URI.
+  https://github.com/gentoo/gentoo-portage-rsync-mirror/pull/98 by jbergstroem.
 
   30 Sep 2013; Agostino Sarubbo <ago@gentoo.org> pgbouncer-1.5.4-r1.ebuild:
   Stable for x86, wrt bug #485972
